--- a/bibliography.tex
+++ b/bibliography.tex
@@ -16,8 +16,9 @@ REFERENCES\\
 
 {\def\section*#1{}
     \addcontentsline{toc}{section}{REFERENCES}
-    \bibliographystyle{acm}
-    \bibliography{references}
+    %\bibliographystyle{acm}
+    %\bibliography{references}
+    \printbibliography[heading=none]
 }
 
 \end{document}
