--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -277,7 +277,8 @@
     useful information, they do not provide a single number 
     to determine the performance of the software.
 
-    Another promising research area is \textit{process mining}.
+    Another promising research area is \textit{process mining}
+    \cite{vanderAalst2012}.
     As stated by Wil van der Aalst \cite{vanderAalst2011}, 
     ``The idea of process mining is to discover, monitor
     and improve real
