--- a/references.bib
+++ b/references.bib
@@ -2,16 +2,15 @@
 	author = 	"Marc Andreessen",
 	title =		"Why Software Is Eating The World",
 	year =		"2011",
-    month =     "August",
+    month =     "8",
 	journal =	"The Wall Street Journal",
-	note =		"\url{http://goo.gl/MXk4TS} accessed 31-Mar-2014",
-	url = {http://online.wsj.com/news/articles/SB10001424053111903480904576512250915629460}
+	url = {http://goo.gl/MXk4TS}
 }
 @INPROCEEDINGS{Antolic2008,
-    author={ Antoli\'{c}, \v{Z} },
+    author={ \v{Z}. Antoli\'{c} },
     title={An Example of Using Key Performance Indicators for Software Development Process Efficiency Evaluation},
     booktitle={MIPRO 2008: 31st International Convention on Information and Communication Technology, Electronics and Microelectronics, May 26-30, 2008, Opatija Croatia. Microelectronics, electronics and electronic technologies, MEET.. Grid and visualization systems, GVS},
-    editor={Biljanovi{\'c}, P. and Skala, K. and Grid and Visualization Systems},
+    editor={Biljanovi{\'c}, P. and Skala, K. and Grid \& Visualization Systems},
     volume={1},
     isbn={9789532330366},
     year={2008},
@@ -28,9 +27,9 @@
     publisher = {John Wiley & Sons},
     address = {Hoboken, NJ, USA}
 }
-@misc{Beck2001,
+@online{Beck2001,
     added-at = {2014-10-27T11:39:05.000+0100},
-    author = {Beck, Kent and Beedle, Mike and van Bennekum, Arie and Cockburn, Alistair and Cunningham, Ward and Fowler, Martin and Grenning, James and Highsmith, Jim and Hunt, Andrew and Jeffries, Ron and Kern, Jon and Marick, Brian and Martin, Robert C. and Mellor, Steve and Schwaber, Ken and Sutherland, Jeff and Thomas, Dave},
+    author = {Beck, Kent and Beedle, Mike and {van Bennekum}, Arie and Cockburn, Alistair and Cunningham, Ward and Fowler, Martin and Grenning, James and Highsmith, Jim and Hunt, Andrew and Jeffries, Ron and Kern, Jon and Marick, Brian and Martin, Robert C. and Mellor, Steve and Schwaber, Ken and Sutherland, Jeff and Thomas, Dave},
     biburl = {http://www.bibsonomy.org/bibtex/28954248a545d88dd2c0e688d1c7e2f9d/juve},
     booktitle = {Manifesto for Agile Software Development},
     description = {Manifesto for Agile Software Development},
@@ -49,7 +48,6 @@
     series = {ICSE '87},
     year = {1987},
     isbn = {0-89791-216-0},
-    location = {Monterey, California, USA},
     pages = {299--310},
     numpages = {12},
     url = {http://dl.acm.org/citation.cfm?id=41765.41799},
@@ -67,29 +65,28 @@
     address = {Upper Saddle River, NJ, USA},
 } 
 @article{Boehm1986,
-    author = {Boehm, B},
+    author = {Boehm, Barry W.},
     title = {A Spiral Model of Software Development and Enhancement},
     journal = {SIGSOFT Software Engineering Notes},
     issue_date = {August 1986},
     volume = {11},
     number = {4},
-    month = {August},
+    month = {8},
     year = {1986},
     issn = {0163-5948},
     pages = {14--24},
     numpages = {11},
-    url = {http://doi.acm.org/10.1145/12944.12948},
     doi = {10.1145/12944.12948},
     acmid = {12948},
     publisher = {ACM},
     address = {New York, NY, USA},
 } 
 @ARTICLE{Boehm1988,
-    author={Boehm, B.W.},
+    author={Boehm, Barry W.},
     journal={Computer},
     title={A spiral model of software development and enhancement},
     year={1988},
-    month={May},
+    month={5},
     volume={21},
     number={5},
     pages={61-72},
@@ -98,11 +95,11 @@
     ISSN={0018-9162},
 }
 @techreport{Boehm2000,
-    author    = "Boehm, Barry and Hansen, Wilfred J.",
+    author    = "Boehm, Barry W. and Hansen, Wilfred J.",
     title     = "Spiral Development: Experience, Principles, and Refinements",
     institution = "Carnegie Mellon Software Engineering Institute",
     year      = "2000",
-    month    = "July",
+    month    = "7",
     note     = " Special Report CMU/SEI-2000-SR-008",
 }
 @book{Boehm2000b,
@@ -115,18 +112,17 @@
     address = {Upper Saddle River, NJ, USA},
 } 
 @article{Boehm2001,
-    author = {Boehm, Barry and Basili, Victor R.},
+    author = {Boehm, Barry W. and Basili, Victor R.},
     title = {Software Defect Reduction Top 10 List},
     journal = {Computer},
     issue_date = {January 2001},
     volume = {34},
     number = {1},
-    month = {January},
+    month = {1},
     year = {2001},
     issn = {0018-9162},
     pages = {135--137},
     numpages = {3},
-    url = {http://dx.doi.org/10.1109/2.962984},
     doi = {10.1109/2.962984},
     acmid = {621640},
     publisher = {IEEE Computer Society Press},
@@ -139,7 +135,6 @@
     series = {FoSER '10},
     year = {2010},
     isbn = {978-1-4503-0427-6},
-    location = {Santa Fe, New Mexico, USA},
     pages = {77--80},
     numpages = {4},
     url = {http://research.microsoft.com/pubs/136301/MSR-TR-2010-111.pdf},
@@ -150,16 +145,14 @@
     keywords = {analytics, project management},
 } 
 @inproceedings{Buse2012,
-    author = {Buse, Raymond P. L. and Zimmermann, Thomas},
+    author = {Buse, Raymond P.L. and Zimmermann, Thomas},
     title = {Information Needs for Software Development Analytics},
     booktitle = {Proceedings of the 34th International Conference on Software Engineering},
     series = {ICSE '12},
     year = {2012},
     isbn = {978-1-4673-1067-3},
-    location = {Zurich, Switzerland},
     pages = {987--996},
     numpages = {10},
-    url = {http://dl.acm.org/citation.cfm?id=2337223.2337343},
     acmid = {2337343},
     publisher = {IEEE Press},
     address = {Piscataway, NJ, USA},
@@ -168,7 +161,7 @@
     author={Dan Cervone and Alexander D'Amour and Luke Bornn and Kirk Goldsberry},
     title={POINTWISE: Predicting Points and Valuing Decisions in Real Time with NBA Optical Tracking Data},
     note={MIT Sloan Sports Analytics Conference \url{http://goo.gl/Rsbds1} accessed 26-Mar-2014},
-    month={February},
+    month={2},
     year={2014}
 }
 @ARTICLE{Charette2005,
@@ -176,7 +169,7 @@
     journal={IEEE Spectrum},
     title={Why software fails [software failure]},
     year={2005},
-    month={September},
+    month={9},
     volume={42},
     number={9},
     pages={42-49},
@@ -188,7 +181,7 @@
     author = {Ernest Cowles and Edward Nelson},
     title = {An Introduction to Survey Research},
     year = {2015},
-    month = {January},
+    month = {1},
     isbn = {978-1-60649-818-7},
     edition = {1st},
     publisher = {Business Expert Press},
@@ -198,7 +191,7 @@
     author = { {CMMI Product Team} },
     title = { {CMMI for Development, Version 1.3} },
     institution = {Carnegie Mellon Software Engineering Institute (SEI)},
-    month = {November},
+    month = {11},
     year = {2010},
     address = {\url{http://goo.gl/MBESq0} }
 }
@@ -215,14 +208,13 @@
     publisher = {IEEE Computer Society},
     address = {Los Alamitos, CA, USA},
 }
-
-@inproceedings{Dubois2013,
-    title={Understanding gamification mechanisms for software development},
-    author={Dubois, Daniel J and Tamburrelli, Giordano},
-    booktitle={Proceedings of the 2013 9th Joint Meeting on Foundations of Software Engineering},
-    pages={659--662},
-    year={2013},
-    organization={ACM}
+@online{Damodaran2015,
+    author = {Aswath Damodaran},
+    title = {Statistical Distributions},
+    url = {http://goo.gl/Jp7mtn},
+    year = {2015},
+    month = {2},
+    organization = {New York University}
 }
 @article{DeMarco2009,
     author = {DeMarco, Tom},
@@ -231,17 +223,33 @@
     issue_date = {July 2009},
     volume = {26},
     number = {4},
-    month = {July},
+    month = {7},
     year = {2009},
     issn = {0740-7459},
     pages = {96--96},
     numpages = {1},
-    url = {http://dx.doi.org/10.1109/MS.2009.101},
     doi = {10.1109/MS.2009.101},
     acmid = {1592148},
     publisher = {IEEE Computer Society Press},
     address = {Los Alamitos, CA, USA},
     keywords = {budget and schedule, control, metrics, project management, software engineering, software engineering, metrics, control, project management, budget and schedule},
+}
+@book{Downey2011,
+	title = {Think Stats: Probability and Statistics for Programmers},
+	year = {2011},
+	pages = {138},
+	publisher = {O{\textquoteright}Reilly Media},
+	organization = {O{\textquoteright}Reilly Media},
+	url = {http://greenteapress.com/thinkstats/},
+	author = {Downey, Allen B.}
+}
+@inproceedings{Dubois2013,
+    title={Understanding gamification mechanisms for software development},
+    author={Dubois, Daniel J and Tamburrelli, Giordano},
+    booktitle={Proceedings of the 2013 9th Joint Meeting on Foundations of Software Engineering},
+    pages={659--662},
+    year={2013},
+    organization={ACM}
 }
 @article{Ebert1999,
     author = {Ebert, Christof and Liedtke, Thomas and Baisch, Ekkehard},
@@ -250,12 +258,11 @@
     issue_date = {1999},
     volume = {8},
     number = {1-4},
-    month = {August},
+    month = {8},
     year = {1999},
     issn = {1022-7091},
     pages = {3--51},
     numpages = {49},
-    url = {http://dx.doi.org/10.1023/A:1018971212809},
     doi = {10.1023/A:1018971212809},
     acmid = {590673},
     publisher = {J. C. Baltzer AG, Science Publishers},
@@ -268,12 +275,11 @@
     issue_date = {September 2008},
     volume = {25},
     number = {5},
-    month = {September},
+    month = {9},
     year = {2008},
     issn = {0740-7459},
     pages = {84--90},
     numpages = {7},
-    url = {http://dx.doi.org/10.1109/MS.2008.107},
     doi = {10.1109/MS.2008.107},
     acmid = {1439231},
     publisher = {IEEE Computer Society Press},
@@ -296,10 +302,8 @@
     series = {PASTE '07},
     year = {2007},
     isbn = {978-1-59593-595-3},
-    location = {San Diego, California, USA},
     pages = {1--8},
     numpages = {8},
-    url = {http://doi.acm.org/10.1145/1251535.1251536},
     doi = {10.1145/1251535.1251536},
     acmid = {1251536},
     publisher = {ACM},
@@ -314,11 +318,11 @@
     year =		"1999"
 }
 @ARTICLE{Genuchten2014,
-    author={van Genuchten, M. and Mans, R. and Reijers, H. and Wismeijer, D.},
+    author={{van Genuchten}, M. and Mans, R. and Reijers, H. and Wismeijer, D.},
     journal={IEEE Software},
     title={Is Your Upgrade Worth It? Process Mining Can Tell},
     year={2014},
-    month={September},
+    month={9},
     volume={31},
     number={5},
     pages={94-100},
@@ -331,7 +335,7 @@
     journal={IEEE Software},
     title={What Do We Know about Software Development in Startups?},
     year={2014},
-    month={September},
+    month={9},
     volume={31},
     number={5},
     pages={28-32},
@@ -339,11 +343,11 @@
     doi={10.1109/MS.2014.129},
     ISSN={0740-7459}
 }
-@misc{Godfrey,
+@online{Godfrey,
     author = {Sally Godfrey},
     title = {Characteristics of Capability Maturity Model},
-    howpublished = { via Wikimedia Commons \url{http://goo.gl/MpNx9b} accessed 12-22-2014 },
-    month = {October},
+    url = {http://goo.gl/MpNx9b},
+    month = {10},
     year = {2011}
 }
 @inproceedings{Goel1997,
@@ -353,10 +357,8 @@
     series = {ICSE '97},
     year = {1997},
     isbn = {0-89791-914-9},
-    location = {Boston, Massachusetts, USA},
     pages = {667--668},
     numpages = {2},
-    url = {http://doi.acm.org/10.1145/253228.253816},
     doi = {10.1145/253228.253816},
     acmid = {253816},
     publisher = {ACM},
@@ -370,7 +372,7 @@
     issue_date = {August 2011},
     volume = {15},
     number = {3},
-    month = {August},
+    month = {8},
     year = {2011},
     issn = {1088-467X},
     pages = {413--441},
@@ -396,10 +398,8 @@
     series = {FoSER '10},
     year = {2010},
     isbn = {978-1-4503-0427-6},
-    location = {Santa Fe, New Mexico, USA},
     pages = {161--166},
     numpages = {6},
-    url = {http://doi.acm.org/10.1145/1882362.1882397},
     doi = {10.1145/1882362.1882397},
     acmid = {1882397},
     publisher = {ACM},
@@ -413,12 +413,11 @@
     issue_date = {July 2013},
     volume = {30},
     number = {4},
-    month = {July},
+    month = {7},
     year = {2013},
     issn = {0740-7459},
     pages = {53--56},
     numpages = {4},
-    url = {http://dx.doi.org/10.1109/MS.2013.85},
     doi = {10.1109/MS.2013.85},
     acmid = {2553363},
     publisher = {IEEE Computer Society Press},
@@ -453,7 +452,7 @@
     journal={{IEEE Std 610.12-1990}},
     title={{IEEE Standard Glossary of Software Engineering Terminology}},
     year={1990},
-    month={December},
+    month={12},
     pages={1-84},
     keywords={glossaries;software engineering;standards;IEEE Std 610.12-1990;software engineering terminology;standard glossary;Software engineering;Standards;Terminology;Definitions;Software engineering;dictionary;glossary;terminology},
     doi={10.1109/IEEESTD.1990.101064}
@@ -475,12 +474,11 @@
     issue_date = {December 2014},
     volume = {57},
     number = {12},
-    month = {November},
+    month = {11},
     year = {2014},
     issn = {0001-0782},
     pages = {49--54},
     numpages = {6},
-    url = {http://doi.acm.org/10.1145/2677034},
     doi = {10.1145/2677034},
     acmid = {2677034},
     publisher = {ACM},
@@ -504,21 +502,21 @@
     publisher = {McGraw-Hill, Inc.},
     address = {New York, NY, USA},
 } 
-@misc{Jones2012,
+@online{Jones2012,
     author= {Jones, Capers},
     year = {2012},
-    month = {June},
+    month = {6},
     title = {SCORING AND EVALUATING SOFTWARE METHODS, PRACTICES, AND RESULTS},
-    howpublished = {\url{http://goo.gl/3i06pN}},
-    note = {Namecook Analytics Blog, accessed 22-Mar-2014  }
+    url = {http://goo.gl/3i06pN},
+    note = {Namecook Analytics Blog }
 }
-@misc{Jones2013,
+@online{Jones2013,
     author= {Jones, Capers},
     year = {2013},
-    month = {July},
+    month = {7},
     title = {{WHY ``COST PER DEFECT'' IS HARMFUL FOR SOFTWARE QUALITY}},
-    howpublished = {\url{http://goo.gl/QUsvlw}},
-    note = {Namecook Analytics Blog, accessed 01-Jan-2015  }
+    url = {http://goo.gl/QUsvlw},
+    note = {Namecook Analytics Blog  }
 }
 @inbook{Jones2013b,
     author = {Jones, Capers},
@@ -536,10 +534,8 @@
     series = {EASE '13},
     year = {2013},
     isbn = {978-1-4503-1848-8},
-    location = {Porto de Galinhas, Brazil},
     pages = {220--227},
     numpages = {8},
-    url = {http://doi.acm.org/10.1145/2460999.2461033},
     doi = {10.1145/2460999.2461033},
     acmid = {2461033},
     publisher = {ACM},
@@ -547,11 +543,11 @@
     keywords = {Dunning-Kruger effect, adverse selection, bidding, project failures, provider selection, software cost estimation, winner's curse},
 } 
 @ARTICLE{Jorgensen2014,
-    author={Jorgensen, M.},
+    author={Jorgensen, Magne},
     journal={IEEE Software},
     title={What We Do and Don't Know about Software Development Effort Estimation},
     year={2014},
-    month={March},
+    month={3},
     volume={31},
     number={2},
     pages={37-40},
@@ -570,9 +566,18 @@
 	author = 	"Robert S. Kaplan and David P. Norton",
 	title =		"The Balanced Scorecard: Measures That Drive Performance",
 	year =		"1992",
-    month =     "January-February",
+    month =     "1",
 	journal =	"Harvard Business Review",
 	pages =		"71-80"
+}
+@book{Kutner2003,
+  title={Applied Linear Regression Models},
+  author={Kutner, M.H. and Nachtsheim, C.J. and Neter, J.},
+  isbn={9780072955675},
+  series={The McGraw-Hill/Irwin Series Operations and Decision Sciences},
+  edition={4th},
+  year={2003},
+  publisher={McGraw-Hill Higher Education}
 }
 @article{Lehtinen2014,
     author = {Lehtinen, Timo O. A. and M\"{a}ntyl\"{a}, Mika V. and Vanhanen, Jari and Itkonen, Juha and Lassenius, Casper},
@@ -581,12 +586,11 @@
     issue_date = {June, 2014},
     volume = {56},
     number = {6},
-    month = {June},
+    month = {6},
     year = {2014},
     issn = {0950-5849},
     pages = {623--643},
     numpages = {21},
-    url = {http://dx.doi.org/10.1016/j.infsof.2014.01.015},
     doi = {10.1016/j.infsof.2014.01.015},
     acmid = {2599045},
     publisher = {Butterworth-Heinemann},
@@ -608,7 +612,7 @@
     issue_date = {May 2012},
     volume = {2},
     number = {5},
-    month = {May},
+    month = {5},
     year = {2012},
     issn = {2277-128X},
     pages = {285--290},
@@ -622,10 +626,8 @@
     series = {FoSER '10},
     year = {2010},
     isbn = {978-1-4503-0427-6},
-    location = {Santa Fe, New Mexico, USA},
     pages = {229--232},
     numpages = {4},
-    url = {http://doi.acm.org/10.1145/1882362.1882410},
     doi = {10.1145/1882362.1882410},
     acmid = {1882410},
     publisher = {ACM},
@@ -638,7 +640,7 @@
     journal={IEEE Transactions on Software Engineering}, 
     title={A Complexity Measure}, 
     year={1976}, 
-    month={December}, 
+    month={12}, 
     volume={SE-2}, 
     number={4}, 
     pages={308-320}, 
@@ -646,11 +648,11 @@
     ISSN={0098-5589},
 }
 @INPROCEEDINGS{Menzies2012, 
-    author={Menzies, T. and Zimmermann, T.}, 
+    author={Menzies, Timothy and Zimmermann, T.}, 
     booktitle={2012 34th International Conference on Software Engineering (ICSE)}, 
     title={Goldfish bowl panel: Software development analytics}, 
     year={2012}, 
-    month={June}, 
+    month={6}, 
     pages={1032-1033}
 }
 @article{Miguel2014,
@@ -658,7 +660,7 @@
     journal={International Journal of Software Engineering \& Applications (IJSEA)}, 
     title={A Review Of Software Quality Models For The Evaluation Of Software Products }, 
     year={2014}, 
-    month={November}, 
+    month={11}, 
     volume={5}, 
     number={6}, 
     pages={31-54}, 
@@ -702,21 +704,20 @@
 }
 @book{PMD,
     title={PMD Applied: An Easy-to-use Guide for Developers},
-    author={Copeland, T.},
+    author={Copeland, Tom},
     isbn={9780976221418},
     lccn={2005907843},
     series={An easy-to-use guide for developers},
-    url={http://books.google.com/books?id=Pj\_8AAAACAAJ},
     year={2005},
     publisher={Centennial Books}
 }
 
 @ONLINE{promise12,
      title  = "The PROMISE Repository of empirical software engineering data",
-     month  = "June",
+     month  = "6",
      year   = "2012",
      url    = "http://promisedata.googlecode.com",
-     author = "Tim Menzies and 
+     author = "Timothy Menzies and 
                Bora Caglayan and 
                Zhimin He and 
                Ekrem Kocaguneli and 
@@ -731,14 +732,13 @@
 	address =	"New York, New York",
 	publisher =	"Addison-Wesley Professional",
 	year =		"2013"
-	month =     "July"
+	month =     "7"
 }
 @inbook{Rost2011,
   title={The Dark Side of Software Engineering: Evil on Computing Projects},
   author={Rost, J. and Glass, R.L.},
   chapter={2 Lying },
   isbn={9780470922873},
-  url={http://books.google.com/books?id=f\_FyOg5XW\_IC},
   year={2011},
   publisher={Wiley}
 }
@@ -749,7 +749,6 @@
     series = {ICSE '87},
     year = {1987},
     isbn = {0-89791-216-0},
-    location = {Monterey, California, USA},
     pages = {328--338},
     numpages = {11},
     url = {http://dl.acm.org/citation.cfm?id=41765.41801},
@@ -758,16 +757,14 @@
     address = {Los Alamitos, CA, USA},
 } 
 @inproceedings{Rubin2007,
-    author = {Rubin, Vladimir and G\"{u}nther, Christian W. and Van Der Aalst, Wil M. P. and Kindler, Ekkart and Van Dongen, Boudewijn F. and Sch\"{a}fer, Wilhelm},
+    author = {Rubin, Vladimir and G\"{u}nther, Christian W. and {van der Aalst}, Wil and Kindler, Ekkart and {Van Dongen}, Boudewijn F. and Sch\"{a}fer, Wilhelm},
     title = {Process Mining Framework for Software Processes},
     booktitle = {Proceedings of the 2007 International Conference on Software Process},
     series = {ICSP'07},
     year = {2007},
     isbn = {978-3-540-72425-4},
-    location = {Minneapolis, MN, USA},
     pages = {169--181},
     numpages = {13},
-    url = {http://dl.acm.org/citation.cfm?id=1763239.1763258},
     acmid = {1763258},
     publisher = {Springer-Verlag},
     address = {Berlin, Heidelberg},
@@ -780,10 +777,8 @@
     series = {AST '06},
     year = {2006},
     isbn = {1-59593-408-1},
-    location = {Shanghai, China},
     pages = {85--91},
     numpages = {7},
-    url = {http://doi.acm.org/10.1145/1138929.1138946},
     doi = {10.1145/1138929.1138946},
     acmid = {1138946},
     publisher = {ACM},
@@ -799,9 +794,8 @@
     editor={Komorowski, Jan and Zytkow, Jan},
     doi={10.1007/3-540-63223-9_116},
     title={Knowledge discovery from software engineering data: Rough set analysis and its interaction with goal-oriented measurement},
-    url={http://dx.doi.org/10.1007/3-540-63223-9_116},
     publisher={Springer Berlin Heidelberg},
-    author={Ruhe, Günther and Gesellschaft, Fraunhofer},
+    author={Ruhe, G\"{u}nther and Gesellschaft, Fraunhofer},
     pages={167-177},
     language={English}
 }
@@ -812,12 +806,11 @@
     issue_date = {May 2010},
     volume = {35},
     number = {3},
-    month = {May},
+    month = {5},
     year = {2010},
     issn = {0163-5948},
     pages = {8--13},
     numpages = {6},
-    url = {http://doi.acm.org/10.1145/1764810.1764814},
     doi = {10.1145/1764810.1764814},
     acmid = {1764814},
     publisher = {ACM},
@@ -834,7 +827,7 @@
     year = {2000},
     pages = {377-395},
     numpages = {19},
-    url = {projecteuclid.org/euclid.ss/1009213004}
+    url = {http://projecteuclid.org/euclid.ss/1009213004}
 } 
 @book{Sommerville2001,
     author =	"Iam Sommerville",
@@ -868,10 +861,8 @@
     series = {HSSE '05},
     year = {2005},
     isbn = {1-59593-120-1},
-    location = {St. Louis, Missouri},
     pages = {1--3},
     numpages = {3},
-    url = {http://doi.acm.org/10.1145/1082983.1083118},
     doi = {10.1145/1082983.1083118},
     acmid = {1083118},
     publisher = {ACM},
@@ -879,19 +870,17 @@
     keywords = {communication, software development, user centered design},
 } 
 @article{Taylor2010,
-    author = {Taylor, Quinn and Giraud\&\#45;Carrier, Christophe},
+    author = {Taylor, Quinn and Giraud-Carrier, Christophe},
     title = {Applications of Data Mining in Software Engineering},
     journal = {International Journal of Data Analysis Techniques and Strategies},
     issue_date = {July 2010},
     volume = {2},
     number = {3},
-    month = {July},
+    month = {7},
     year = {2010},
     issn = {1755-8050},
     pages = {243--257},
     numpages = {15},
-    url = {http://dx.doi.org/10.1504/IJDATS.2010.034058},
-    doi = {10.1504/IJDATS.2010.034058},
     acmid = {1833480},
     publisher = {Inderscience Publishers},
     address = {Inderscience Publishers, Geneva, SWITZERLAND},
@@ -904,10 +893,8 @@
     series = {ESEM '12},
     year = {2012},
     isbn = {978-1-4503-1056-7},
-    location = {Lund, Sweden},
     pages = {39--48},
     numpages = {10},
-    url = {http://doi.acm.org/10.1145/2372251.2372259},
     doi = {10.1145/2372251.2372259},
     acmid = {2372259},
     publisher = {ACM},
@@ -923,25 +910,24 @@
 }
 @book{vanderAalst2011,
     title={Process Mining : Discovery, Conformance and Enhancement of Business Processes},
-    author={van der Aalst, Wil},
+    author={Wil {van der Aalst}},
     year={2011},
     publisher={Springer},
     address={ Heidelberg }
 }
 @article{vanderAalst2012,
-    author = {van der Aalst, Wil},
+    author = {Wil {van der Aalst}},
     title = {Process Mining: Overview and Opportunities},
-    journal = {ACM Trans. Manage. Inf. Syst.},
+    journal = {ACM Transactions on Management Information Systems},
     issue_date = {July 2012},
     volume = {3},
     number = {2},
-    month = {July},
+    month = {7},
     year = {2012},
     issn = {2158-656X},
     pages = {7:1--7:17},
     articleno = {7},
     numpages = {17},
-    url = {http://doi.acm.org/10.1145/2229156.2229157},
     doi = {10.1145/2229156.2229157},
     acmid = {2229157},
     publisher = {ACM},
@@ -957,7 +943,6 @@
     editor={Spagnolli, Anna and Chittaro, Luca and Gamberini, Luciano},
     doi={10.1007/978-3-319-07127-5_23},
     title={(Re)Defining Gamification: A Process Approach},
-    url={http://dx.doi.org/10.1007/978-3-319-07127-5_23},
     publisher={Springer International Publishing},
     keywords={Gamification; games; persuasive design; persuasive technology},
     author={Werbach, Kevin},
@@ -969,7 +954,7 @@
     booktitle={Emerging Trends in Software Metrics (WETSoM), 2013 4th International Workshop on},
     title={Sextant: A tool to specify and visualize software metrics for Java source-code},
     year={2013},
-    month={May},
+    month={5},
     pages={49-55},
     keywords={Java;data visualisation;software metrics;software tools;Java source-code;Sextant;domain-specific metric;even application specific metric;metrics-related information;software development;software metrics;Color;Complexity theory;Java;Software;Software metrics;Java;Sextant;program transformation;software metrics;software visualization;source code analysis},
     doi={10.1109/WETSoM.2013.6619336},
@@ -995,10 +980,8 @@
     series = {MALETS '11},
     year = {2011},
     isbn = {978-1-4503-1022-2},
-    location = {Lawrence, Kansas, USA},
     pages = {55--58},
     numpages = {4},
-    url = {http://doi.acm.org/10.1145/2070821.2070829},
     doi = {10.1145/2070821.2070829},
     acmid = {2070829},
     publisher = {ACM},
@@ -1012,12 +995,11 @@
     issue_date = {September 2013},
     volume = {30},
     number = {5},
-    month = {September},
+    month = {9},
     year = {2013},
     issn = {0740-7459},
     pages = {30--37},
     numpages = {8},
-    url = {http://dx.doi.org/10.1109/MS.2013.94},
     doi = {10.1109/MS.2013.94},
     acmid = {2553380},
     publisher = {IEEE Computer Society Press},
