fix some reference/url issues uploaded new PDF file

--- a/references.bib
+++ b/references.bib
@@ -50,7 +50,6 @@
     isbn = {0-89791-216-0},
     pages = {299--310},
     numpages = {12},
-    url = {http://dl.acm.org/citation.cfm?id=41765.41799},
     acmid = {41799},
     publisher = {IEEE Computer Society Press},
     address = {Los Alamitos, CA, USA},
@@ -204,7 +203,7 @@
     issn = {0740-7459},
     year = {2013},
     pages = {64-71},
-    doi = {http://doi.ieeecomputersociety.org/10.1109/MS.2013.68},
+    doi = {10.1109/MS.2013.68},
     publisher = {IEEE Computer Society},
     address = {Los Alamitos, CA, USA},
 }
@@ -377,7 +376,6 @@
     issn = {1088-467X},
     pages = {413--441},
     numpages = {29},
-    url = {http://dl.acm.org/citation.cfm?id=2010978.2010987},
     acmid = {2010987},
     publisher = {IOS Press},
     address = {Amsterdam, The Netherlands, The Netherlands},
@@ -436,8 +434,8 @@
     title={How to Measure Anything: Finding the Value of Intangibles in Business},
     author={Hubbard, D.W.},
     isbn={9780470625699},
-    url={http://books.google.com/books?id=CBAh4eM-g3AC},
     year={2010},
+    edition={2nd},
     publisher={Wiley}
 }
 @book{Ichu2012,
@@ -691,7 +689,6 @@
   isbn={9780080503691},
   lccn={2002112508},
   series={The Morgan Kaufmann Series in Data Management Systems},
-  url={https://books.google.com/books?id=x8ahL57VOtcC},
   year={2003},
   publisher={Elsevier Science}
 }
@@ -751,7 +748,6 @@
     isbn = {0-89791-216-0},
     pages = {328--338},
     numpages = {11},
-    url = {http://dl.acm.org/citation.cfm?id=41765.41801},
     acmid = {41801},
     publisher = {IEEE Computer Society Press},
     address = {Los Alamitos, CA, USA},
@@ -969,7 +965,7 @@
     issn = {0018-9162},
     year = {2009},
     pages = {55-62},
-    doi = {http://doi.ieeecomputersociety.org/10.1109/MC.2009.256},
+    doi = {10.1109/MC.2009.256},
     publisher = {IEEE Computer Society},
     address = {Los Alamitos, CA, USA},
 }
